--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nuxt start",
     "export": "nuxt export",
     "serve": "nuxt serve",
+    "heroku-postbuild": "npm run build",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "npm run lint:js"
   },
@@ -19,7 +20,8 @@
     "element-ui": "^2.13.2",
     "firebase": "^7.15.5",
     "lodash": "^4.17.15",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.13.0",
+    "nuxt-mq": "^2.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
