--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/firebase": "^6.1.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@nuxtjs/yandex-metrika": "^1.0.3",
     "element-ui": "^2.13.2",
     "firebase": "^7.15.5",
     "lodash": "^4.17.15",
