--- a/nginx/conf.d/virtual.conf
+++ b/nginx/conf.d/virtual.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
     index index.html;
-    server_name feedback.us;
+    server_name feedbacks.us;
 
     location / {
         proxy_pass http://nuxt_family:3001;
