--- a/nginx/conf.d/virtual.conf
+++ b/nginx/conf.d/virtual.conf
@@ -18,7 +18,7 @@ server {
     listen 80;
     listen [::]:80;
     index index.html;
-    server_name feedbackusa.com;
+    server_name feedbacksusa.com;
 
     location / {
         proxy_pass http://nuxt_brand:3000;
